feat: create user permissions control and info editing page

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,11 +46,11 @@
   --radius: 0.75rem;
   --font-poppins: "Poppins", sans-serif;
   --background: rgba(242, 244, 248, 1);
-  --foreground: oklch(0.145 0 0);
+  --foreground: rgb(25, 26, 34);
   --card: rgba(255, 255, 254, 0.9961);
-  --card-foreground: oklch(0.145 0 0);
+  --card-foreground: rgb(25, 26, 34);
   --popover: rgba(255, 255, 254, 0.9961);
-  --popover-foreground: oklch(0.145 0 0);
+  --popover-foreground: rgb(25, 26, 34);
   --primary: rgba(69, 160, 223, 1);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: rgba(232, 232, 232, 0.85);
@@ -71,8 +71,9 @@
   --sidebar: rgba(17, 50, 98, 1);
   --highlight: rgba(69, 160, 223, 1);
   --highlight-secondary: rgba(92, 197, 11, 0.7);
-  --paragraph: oklch(0.141 0.005 285.823),
-  --header: rgba(35, 35, 35, 1),
+  --paragraph: oklch(0.141 0.005 285.823);
+  --header: rgba(35, 35, 35, 1);
+  --scrollbar: rgb(148, 192, 223);
 }
 
 .dark {
@@ -102,13 +103,29 @@
   --sidebar: rgba(17, 50, 98, 1);
   --highlight: rgba(69, 160, 223, 1);
   --highlight-secondary: rgba(92, 197, 11, 0.7);
+    --scrollbar: rgb(148, 192, 223);
+}
 
-  @layer base {
-    * {
-      @apply border-border outline-ring/50;
-    }
-    body {
-      @apply bg-background text-foreground font-sans;
-    }
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground font-sans;
   }
 }
+
+::-webkit-scrollbar {
+  width: 0.7rem;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--background);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar);
+  border-radius: 10px;
+  border: 2px solid var(--background);
+}
+
