--- a/app/globals.css
+++ b/app/globals.css
@@ -115,6 +115,46 @@
   }
 }
 
+.fc-toolbar-title {
+  font-size: 1.5rem !important;
+  font-weight: 500 !important; 
+  color: var(--foreground) !important;
+}
+.fc .fc-button {
+  background-color: var(--sidebar) !important;
+  color: #fff !important;
+  border: none !important;
+  font-size: 0.95rem !important;
+  font-weight: 200 !important;
+  padding: 0.4rem 1rem !important;
+  transition: background 0.15s;
+  box-shadow: none !important;
+}
+.fc .fc-button:hover, .fc .fc-button:focus {
+  background-color: var(--sidebar) !important;
+}
+.fc .fc-button:disabled,
+.fc .fc-button.fc-button-disabled {
+  background-color: #cbd5e1 !important;
+  color: #64748b !important;
+}
+.fc .fc-col-header-cell {
+  background: rgba(255, 255, 255, 0.233);
+    font-size: 0.95rem !important;
+  font-weight: 300 !important; 
+  color: #334155 !important;
+}
+.fc .fc-daygrid-day.fc-day-today,
+.fc .fc-timegrid-col.fc-day-today {
+  background-color: rgba(59, 131, 246, 0.13) !important;
+}
+.fc-event-time{
+  display: none;
+}
+.fc-event-title{
+  cursor: pointer;
+}
+
 ::-webkit-scrollbar {
   width: 0.7rem;
 }
